# well-named-in-cpp-art-pogorelov

./: .clang-format  CMakeLists.txt
.github/workflows/: main-workflow.yml
example/: CMakeLists.txt
example/src/: main.cpp
lib/: CMakeLists.txt
lib/include/ColorCodes/: Mapping.h  Types.h
lib/src/: Mapping.cpp  Utils.h
lib/test/: CMakeLists.txt
lib/test/src/: MappingTest.cpp
